Input Text selection feature added

--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "mn-numeric-input",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Numeric input allowing comma seperator after thousand, can be used for pure integer number as well as for float. Restrict user to enter alphabets only accepts numbers and only one dot in case of float number",
   "keywords": [
     "ember-addon",
     "number-input",
     "comma",
-    "currancy"
+    "currancy",
+    "ember-number-input",
+    "formatted-number",
+    "comma-separated",
+    "currency",
+    "input",
+    "number",
+    "numeric",
+    "component",
+    "emberjs",
+    "validation",
+    "ember-numeric-input",
+    "widget",
+    "number-validation ",
+    "decimal",
+    "ember input type"
   ],
   "license": "MIT",
   "author": "Mohasin Nadaf",
